<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="todo" type="com.joseph18.ifubaya.todoapp.model.Todo" />
        <variable name="listener" type="com.joseph18.ifubaya.todoapp.view.TodoSaveChangesClickListener" />
        <variable name="radiolistener" type="com.joseph18.ifubaya.todoapp.view.RadioClickListener" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.CreateTodoFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtJudulTodo"
                style="@style/TextAppearance.MaterialComponents.Headline2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/editTodo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/todoTitle"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtJudulTodo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtTodoTitle"
                    android:text="@={todo.title}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/todoNotes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtTodoNotes"
                    android:text="@={todo.notes}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnCreateTodo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/saveChanges"
                android:onClick="@{(view) -> listener.onTodoSaveChangesClick(view, todo)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView2"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/priority"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

            <RadioGroup
                android:id="@+id/radioGroupPirority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <RadioButton
                    android:id="@+id/radioHigh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{todo.priorityLevel==3}"
                    android:tag="3"
                    android:text="@string/highPriority"
                    android:onClick="@{(view) -> radiolistener.onRadioClick(view, todo)}" />

                <RadioButton
                    android:id="@+id/radioMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{todo.priorityLevel==2}"
                    android:tag="2"
                    android:text="@string/mediumPriority" />

                <RadioButton
                    android:id="@+id/radioLow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{todo.priorityLevel==3}"
                    android:tag="1"
                    android:text="@string/lowPriority" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>